# pontifex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SOLUTION_DESIGN.md  docker-compose.stdio.yml  docker-compose.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml
alembic/: alembic.ini  env.py
core/: LICENSE  README.md  pyproject.toml
core/mcp_core/: __init__.py  audit.py  config.py  server_factory.py  tool_runtime.py
core/mcp_core/adapters/: base.py  manager.py
core/mcp_core/auth/: __init__.py  api_keys.py  context.py  discovery.py  identity.py  jwt_validator.py
core/mcp_core/cache/: redis_cache.py
core/mcp_core/middleware/: audit.py  auth.py  rate_limit.py
core/mcp_core/models/: __init__.py
core/mcp_core/observability/: logfire_setup.py
core/mcp_core/utils/: retry.py
core/pontifex_mcp/: __init__.py  app.py  audit.py  config.py  server_factory.py  storage.py  tool_runtime.py
core/pontifex_mcp/.agents/skills/pontifex-mcp/: SKILL.md
core/pontifex_mcp/adapters/: manager.py
core/pontifex_mcp/auth/: __init__.py  api_keys.py  context.py  identity.py  jwt_validator.py  scopes.py
core/pontifex_mcp/cli/: __init__.py  _db.py  _output.py  db.py  keys.py
core/pontifex_mcp/connectors/: __init__.py  adapter.py  auth.py  config.py  register.py  spec.py  token_exchange.py
core/pontifex_mcp/middleware/: auth.py
core/pontifex_mcp/migrations/: __init__.py  alembic.ini  env.py  lock.py
core/pontifex_mcp/migrations/versions/: 001_create_api_keys.py  002_create_audit_log.py  004b_rename_schema_core_to_pontifex_mcp_core.py  005_rename_domain_to_namespace.py
core/pontifex_mcp/models/: __init__.py  base.py  db.py
core/pontifex_mcp/observability/: logfire_setup.py  metrics.py
core/pontifex_mcp/utils/: circuit_breaker.py
deploy/: Dockerfile.gse  connectors.example.yaml  entrypoint.sh  fly.gse.toml  fly.toml
docs/: concepts.md  concepts.mdx  connectors.md  deployment.md  deployment.mdx  docs.json  getting-started.md  getting-started.mdx  index.md  index.mdx  overview.md  reference.md  reference.mdx  (+2 more)
examples/gse/: README.md  pyproject.toml
examples/gse/gse_mcp/: __init__.py  config.py  data.py  main.py  models.py
examples/gse/gse_mcp/adapters/: gse_official.py  kwayisi.py  protocol.py
examples/gse/gse_mcp/tools/: __init__.py  _helpers.py  company_info.py  live_prices.py  market_summary.py  stock_history.py  stock_price.py
(+114 files in other folders)
