[project]
name = "pontifex-mcp"
version = "0.3.0"
description = "The security, access-control, and governance layer for MCP servers."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Chris Dare" }]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "oauth", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "logfire[fastapi,httpx,redis]>=3.0.0",
    "structlog>=24.0.0",
    "authlib>=1.3.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://argonauts.chrisdare.me"
Repository = "https://github.com/chris-dare/pontifex"
Issues = "https://github.com/chris-dare/pontifex/issues"

[build-system]
requires = ["uv_build>=0.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pontifex_mcp"
module-root = ""
