[project]
name = "gse-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pontifex-mcp",
]

[tool.uv.sources]
pontifex-mcp = { workspace = true }

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gse_mcp"
module-root = ""
